--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pretest": "standard && npm run prepare",
     "test": "tap --cov test.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "html": "nyc report --reporter=html && open coverage/index.html",
     "release": "standard-version"
   },
   "repository": {
