chore: bump dependencies, December 2020 edition (#14)
* bump minor dev deps: coveralls and tap
* bump major: standard-version
* bump major: standard 14 -> 16
* drop Node 10, use Node 12 instead
* fix travis config warnings

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-sudo: false
 language: node_js
 node_js:
   - 'node'
   - 'lts/*'
-  - 'lts/dubnium'
+  - 'lts/erbium'
+os: linux
+dist: bionic # bionic = Ubuntu 18.04 LTS, focal = Ubuntu 20.04 LTS
 after_success: npm run coverage
