--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,5 @@ jobs:
           check-latest: true
       - run: npm install
       - run: npm run coverage
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
