--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           check-latest: true
       - run: npm install
+      - run: npm run test
       - run: npm run coverage
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-          
